--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users-verification-api",
+  "name": "cutomers-verification-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
